[gd_scene load_steps=7 format=2]

[ext_resource path="res://modifiers/modifier.gd" type="Script" id=1]
[ext_resource path="res://icons/eyecon.png" type="Texture" id=2]
[ext_resource path="res://icons/eyecon_closed.png" type="Texture" id=3]
[ext_resource path="res://icons/triangle_left.png" type="Texture" id=4]
[ext_resource path="res://icons/triangle_down.png" type="Texture" id=5]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=6]

[node name="Modifier" type="PanelContainer"]
anchor_right = 1.0
margin_left = -1.25989
margin_right = -1.25989
margin_bottom = 60.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 105.0
size_flags_vertical = 3
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Main"]
margin_right = 1280.0
margin_bottom = 33.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = -5

[node name="MoveHandle" type="TextureButton" parent="Main/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 1270.0
margin_bottom = 38.0
mouse_default_cursor_shape = 13
keep_pressed_outside = true
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="Main/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 1270.0
margin_bottom = 38.0
mouse_filter = 2
size_flags_vertical = 0

[node name="Skip" type="TextureButton" parent="Main/MarginContainer/Title"]
margin_right = 20.0
margin_bottom = 33.0
hint_tooltip = "Skip"
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Main/MarginContainer/Title"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 24.0
margin_right = 34.0
margin_bottom = 33.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/MarginContainer/Title"]
margin_left = 38.0
margin_right = 89.0
margin_bottom = 33.0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Contrast
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Main/MarginContainer/Title"]
margin_left = 93.0
margin_right = 1235.0
margin_bottom = 33.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="ShowSecondary" type="TextureButton" parent="Main/MarginContainer/Title"]
margin_left = 1239.0
margin_right = 1260.0
margin_bottom = 33.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
toggle_mode = true
pressed = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
stretch_mode = 2

[node name="VSeparator" type="HSeparator" parent="Main"]
margin_top = 37.0
margin_right = 1280.0
margin_bottom = 47.0
custom_constants/separation = 10

[node name="MarginContainer2" type="MarginContainer" parent="Main"]
margin_top = 51.0
margin_right = 1280.0
margin_bottom = 71.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Primary" type="VBoxContainer" parent="Main/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 10.0

[node name="MarginContainer3" type="MarginContainer" parent="Main"]
margin_top = 75.0
margin_right = 1280.0
margin_bottom = 105.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="Secondary" type="PanelContainer" parent="Main/MarginContainer3"]
self_modulate = Color( 0.882353, 0.882353, 0.882353, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 10.0
theme = ExtResource( 6 )

[node name="VBox" type="VBoxContainer" parent="Main/MarginContainer3/Secondary"]
margin_right = 1260.0

[connection signal="button_down" from="Main/MarginContainer/MoveHandle" to="." method="_on_MoveHandle_button_down"]
[connection signal="button_up" from="Main/MarginContainer/MoveHandle" to="." method="_on_MoveHandle_button_up"]
[connection signal="toggled" from="Main/MarginContainer/Title/Skip" to="." method="_on_skip_toggled"]
[connection signal="toggled" from="Main/MarginContainer/Title/ShowSecondary" to="." method="_on_show_toggled"]
